@@ -56,16 +56,18 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-04-28 16:27:14 L.247'27166 T3649102745.K ~101 +----+----+----+----+----+
-     TimeCnt : //z 2015-04-27 16:48:05 L.248'25915 T3583709115.K ~3   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-04-28 16:26:55 L.247'27185 T3649066941.K ~5   +----+----+----+----+----+
+     Zndex_E : //z 2015-04-30 13:19:35 L.245'38425 T1468619283.K ~107 +----+----+----+----+----+
+     TimeCnt : //z 2015-04-29 11:40:16 L.246'44384 T1556651858.K ~4   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-04-30 13:19:18 L.245'38442 T1468619220.K ~6   +----+----+----+----+----+
+     #6   R+ : //z 2015-04-30 13:19:18 L.245'38442 T1468619220.K ~6     V+.109  L+.169  
      #5   R+ : //z 2015-04-28 16:26:55 L.247'27185 T3649066941.K ~5     V+.102  L+.162  
      #4   R+ : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~4     V+.46   L+.132  
      #3   R+ : //z 2015-04-27 11:35:34 L.248'44666 T1420042932.K ~3     V+.29   L+.108  
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-04-28 16:27:14 L.247'27166 T3649102745.K ~106   R+.5    L+.161  --+----+
+     Version : //z 2015-04-30 13:19:35 L.245'38425 T1468619283.K ~113   R+.6    L+.168  --+----+
+     #5   R+ : //z 2015-04-30 13:19:18 L.245'38442 T1468619220.K ~109   R+.6    L+.170  V+.109  
      #5   R+ : //z 2015-04-28 16:26:55 L.247'27185 T3649066941.K ~102   R+.5    L+.163  V+.102  
      #5   V+ : //z 2015-04-27 17:54:13 L.248'21947 T581251992 .K ~95    R+.4    L+.156  
      #4   V+ : //z 2015-04-27 16:35:40 L.248'26660 T3582415510.K ~76    R+.4    L+.139  
@@ -159,5 +161,10 @@ http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html
 #endregion //z 2015-04-27 16:23:21 L.248'27399 BG57IV3@XCL T3581157650.K.F4146951713-+----+----+
 
 #region 04-28 16:26 R#.5    @绘制类图，类继承
-01. 
+//z 2015-04-29 11:40:16 L.246'44384 T1556651858.K[T4,L162,R5,V107]
+01. 总体上已完成。
 #endregion //z 2015-04-28 16:26:55 L.247'27185 BG57IV3@XCL T3649066941.K.F4146951713-+----+----+
+
+#region 04-30 13:19 R#.6    @EA公司发表自制的EASTL规格 游戏开发方面对STL的性能及功能需求的特点
+01. 
+#endregion //z 2015-04-30 13:19:18 L.245'38442 BG57IV3@XCL T1468619220.K.F4146951713-+----+----+
